kustomization/project-service/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-service
  labels:
    pod-security.kubernetes.io/enforce: baseline
