kustomization/project-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app.kubernetes.io/name: project-service
    app.kubernetes.io/instance: project
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Me
    app.kubernetes.io/component: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: project-service-pod
      app.kubernetes.io/instance: project
  template:
    metadata:
      labels:
        app.kubernetes.io/name: project-service-pod
        app.kubernetes.io/instance: project
        app.kubernetes.io/version: "latest"
        app.kubernetes.io/managed-by: Me
        app.kubernetes.io/component: microservice
    spec:
      priorityClassName: middle
      containers:
      - name: app
        image: inchanterx/faberge-project-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: project
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /project/health
            port: project
          failureThreshold: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
          initialDelaySeconds: 120
        livenessProbe:
          httpGet:
            path: /project/health
            port: project
          periodSeconds: 5
          failureThreshold: 30
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            memory: 1Gi
