kustomization/project-service/base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
spec:
  parentRefs:
    - name: home-gateway
      namespace: default
  hostnames:
    - "lab.faberge-eggs.ru"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /project
      backendRefs:
        - name: app
          port: 8000
